<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/polospolos"
    tools:context=".Activitymenuutama">

    <ImageView
        android:id="@+id/logomediakecil"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logomediakecil"
        android:contentDescription="@string/gambar_deskripsi" />

    <ImageView
        android:id="@+id/menubanner"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/menubanner" />

    <Button
        android:id="@+id/btkikd"
        android:layout_width="165dp"
        android:layout_height="187dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="190dp"
        android:background="@drawable/btkikd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/kikd_button" />

    <Button
        android:id="@+id/btmateri"
        android:layout_width="165dp"
        android:layout_height="187dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="190dp"
        android:background="@drawable/btmateri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/materi_button" />

    <Button
        android:id="@+id/btevaluasi"
        android:layout_width="165dp"
        android:layout_height="187dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/btevaluasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/evaluasi_button"/>

    <Button
        android:id="@+id/btprofil"
        android:layout_width="165dp"
        android:layout_height="187dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/btprofil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/profil_button"/>

    <Button
        android:id="@+id/btpetunjuk"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/info"
        android:contentDescription="@string/petunjuk_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />

    <Button
        android:id="@+id/btsound"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="300dp"
        android:background="@drawable/sound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/suara_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>