<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/polospolos"
    tools:context=".Activitymenukurikulum">

    <ImageView
        android:id="@+id/logomediakecil"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logomediakecil"
        android:contentDescription="@string/gambar_deskripsi" />

    <ImageView
        android:id="@+id/menubanner"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        app:srcCompat="@drawable/kurikulumbanner" />

    <Button
        android:id="@+id/bthome"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/home_button"/>

    <Button
        android:id="@+id/btki"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:background="@drawable/btki"
        android:contentDescription="@string/description_btki"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

    <Button
        android:id="@+id/btkd"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:background="@drawable/btkd"
        android:contentDescription="@string/description_btkd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.792"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.287" />

</androidx.constraintlayout.widget.ConstraintLayout>