<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgpolos"
    tools:context=".Activitymenulevel">

    <ImageView
        android:id="@+id/logomediakecil"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logomediakecil"
        android:contentDescription="@string/gambar_deskripsi" />

    <ImageView
        android:id="@+id/logomateri"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/logounimus"
        app:layout_constraintStart_toEndOf="@+id/logomediakecil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/hidenobjek"
        android:contentDescription="@string/gambar_deskripsi" />

    <ImageView
        android:id="@+id/logounimus"
        android:layout_width="58dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/logounimus"
        android:contentDescription="@string/gambar_deskripsi" />

    <Button
        android:id="@+id/btlevel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btlevel1"
        android:contentDescription="@string/description_btlevel1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <Button
        android:id="@+id/btlevel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btlevel2"
        android:contentDescription="@string/description_btlevel2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btlevel1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btlevel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/btlevel3"
        android:contentDescription="@string/description_btlevel3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btlevel2"
        app:layout_constraintVertical_bias="0.0" />



    <Button
        android:id="@+id/bthome"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/home_button"/>

    <Button
        android:id="@+id/btreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="Reset"
        android:visibility="gone"
        android:backgroundTint="@color/white"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="580dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>