<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/polospolos"
    tools:context=".Activitymenumateri">

    <ImageView
        android:id="@+id/logomediakecil"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.002"
        app:srcCompat="@drawable/logomediakecil" />

    <ImageView
        android:id="@+id/logomateri"
        android:layout_width="250dp"
        android:layout_height="72dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/logomediakecil"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bnmateri" />

    <ImageView
        android:id="@+id/textmenumateri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logomateri"
        app:srcCompat="@drawable/textmenumateri" />

    <Button
        android:id="@+id/btsubmateri1"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btsubtitusi"
        android:contentDescription="@string/description_btsubmateri1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textmenumateri" />

    <Button
        android:id="@+id/btsubmateri3"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btgabungan"
        android:contentDescription="@string/description_btsubmateri3"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btsubmateri2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btsubmateri2"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bteliminasi"
        android:contentDescription="@string/description_btsubmateri2"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btsubmateri1" />

    <Button
        android:id="@+id/bthome"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/home"
        android:contentDescription="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <Button
        android:id="@+id/btsoalcerita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btsoalcerita"
        android:contentDescription="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>