<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/polospolos"
    tools:context=".Activitylevel2">

    <ImageView
        android:id="@+id/logomediakecil"
        android:layout_width="95dp"
        android:layout_height="80dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="55dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toTopOf="@+id/gamelevel2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logomediakecil" />

    <!-- Latar Belakang -->


    <ImageView
        android:id="@+id/gamelevel2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gambar_deskripsi"
        android:scaleType="fitXY"
        android:src="@drawable/gamelevel2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.623" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="16dp"
        android:text="Waktu: 120 detik"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#2B2E43"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/gamelevel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/papanskor" />

    <ImageView
        android:id="@+id/papanskor"
        android:layout_width="170dp"
        android:layout_height="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="57dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toTopOf="@+id/gamelevel2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.917"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level2"
        app:srcCompat="@drawable/skor" />


    <TextView
        android:id="@+id/Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="30"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#2B2E43"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/papanskor"
        app:layout_constraintEnd_toEndOf="@+id/papanskor"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/papanskor"
        app:layout_constraintTop_toTopOf="@+id/papanskor"
        app:layout_constraintVertical_bias="0.888" />

    <Button
        android:id="@+id/bthome"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/home"
        android:contentDescription="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamelevel2" />

    <Button
        android:id="@+id/btpertanyaan"
        android:layout_width="66dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/pertanyaan"
        android:contentDescription="@string/description_btpertanyaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gamelevel2" />

    <ImageView
        android:id="@+id/level2"
        android:layout_width="170dp"
        android:layout_height="39dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toTopOf="@+id/Score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/level2" />


    <ImageView
        android:id="@+id/jawaban1l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="300dp"
        android:layout_marginBottom="144dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toBottomOf="@+id/gamelevel2"
        app:layout_constraintEnd_toEndOf="@+id/gamelevel2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gamelevel2"
        app:layout_constraintTop_toTopOf="@+id/gamelevel2"
        app:srcCompat="@drawable/jawaban1l2" />

    <ImageView
        android:id="@+id/jawaban2l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="527dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toBottomOf="@+id/gamelevel2"
        app:layout_constraintEnd_toEndOf="@+id/gamelevel2"
        app:layout_constraintStart_toStartOf="@+id/gamelevel2"
        app:layout_constraintTop_toTopOf="@+id/gamelevel2"
        app:layout_constraintVertical_bias="0.222"
        app:srcCompat="@drawable/jawaban2l2" />

    <ImageView
        android:id="@+id/jawaban3l2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="203dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="260dp"
        android:contentDescription="@string/gambar_deskripsi"
        app:layout_constraintBottom_toBottomOf="@+id/gamelevel2"
        app:layout_constraintEnd_toEndOf="@+id/gamelevel2"
        app:layout_constraintStart_toStartOf="@+id/gamelevel2"
        app:layout_constraintTop_toTopOf="@+id/gamelevel2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/jawaban3l2" />

</androidx.constraintlayout.widget.ConstraintLayout>